Revert "added already existed class gametype1 xml and its activity class"
This reverts commit c23593c63b9c16d0aa792d774a1988bf1c515e91.

--- a/MemoryGame/app/src/main/AndroidManifest.xml
+++ b/MemoryGame/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".game1Activity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.MemoryGameActivities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
