--- a/MemoryGame/local.properties
+++ b/MemoryGame/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Apr 24 21:29:11 EEST 2020
-sdk.dir=C\:\\Users\\georg\\AppData\\Local\\Android\\Sdk
+#Sat Apr 25 15:36:12 EEST 2020
+sdk.dir=C\:\\Users\\GEORGE\\AppData\\Local\\Android\\Sdk
