--- a/MemoryGame/app/src/main/AndroidManifest.xml
+++ b/MemoryGame/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.MemoryGameActivities.MainActivity">
+        <activity android:name=".Highscores"></activity>
+        <activity android:name=".findPlayerActivity" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
