--- a/MemoryGame/local.properties
+++ b/MemoryGame/local.properties
@@ -4,9 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-#Thu Apr 23 15:16:47 EEST 2020
-=======
-#Sat Apr 25 15:36:12 EEST 2020
->>>>>>> master
-sdk.dir=C\:\\Users\\GEORGE\\AppData\\Local\\Android\\Sdk
+#Sat Apr 25 19:24:42 EEST 2020
+>>>>>>>=master
+sdk.dir=C\:\\Users\\georg\\AppData\\Local\\Android\\Sdk
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
