man Activity res got replaced by the game activity. Fixed it

--- a/MemoryGame/app/src/main/AndroidManifest.xml
+++ b/MemoryGame/app/src/main/AndroidManifest.xml
@@ -9,15 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.memory_game.app.MainActivity">
-        <activity android:name=".Highscores"></activity>
-        <activity android:name=".findPlayerActivity" />
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name="com.android.MemoryGameActivities.MainActivity"></activity>
     </application>
 
 </manifest>
