--- a/MemoryGame/app/src/main/AndroidManifest.xml
+++ b/MemoryGame/app/src/main/AndroidManifest.xml
@@ -9,20 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
         <activity android:name="com.android.MemoryGameActivities.MainActivity">
             <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity android:name="com.android.MemoryGameActivities.ModeSelection"></activity>
-        <activity android:name="com.android.MemoryGameActivities.Rules"></activity>
-        <activity android:name="com.android.MemoryGameActivities.SelectionScreen"></activity>
-        <activity android:name="com.android.MemoryGameActivities.Highscores"></activity>
-        <activity android:name="com.android.MemoryGameActivities.findPlayerActivity"></activity>
-        <activity android:name="com.android.MemoryGameActivities.PairsOfTwoCardsActivity"></activity>
+        <activity android:name="com.android.MemoryGameActivities.ModeSelection" />
+        <activity android:name="com.android.MemoryGameActivities.SelectionScreen" />
+        <activity android:name="com.android.MemoryGameActivities.Highscores" />
+        <activity android:name="com.android.MemoryGameActivities.rulesPage"/>
+        <activity android:name="com.android.MemoryGameActivities.findPlayerActivity" />
+        <activity android:name="com.android.MemoryGameActivities.PairsOfTwoCardsActivity" />
     </application>
 
 </manifest>
