--- a/MemoryGame/local.properties
+++ b/MemoryGame/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat May 16 17:29:38 EEST 2020
+#Mon May 18 09:46:25 EEST 2020
 >>>>>>>=master
-sdk.dir=C\:\\Users\\georg\\AppData\\Local\\Android\\Sdk
-=\=\=\=\=\=\=
+sdk.dir=C\:\\Users\\GEORGE\\AppData\\Local\\Android\\Sdk
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
