bugfixed selection screen activity and created javadoc for some classes

--- a/MemoryGame/app/src/main/AndroidManifest.xml
+++ b/MemoryGame/app/src/main/AndroidManifest.xml
@@ -18,11 +18,12 @@
         </intent-filter>
         </activity>
         <activity android:name="com.android.MemoryGameActivities.ModeSelection"></activity>
-        <activity android:name="com.android.MemoryGameActivities.Rules"></activity>
+        <activity android:name="com.android.MemoryGameActivities.rulesPage"></activity>
         <activity android:name="com.android.MemoryGameActivities.SelectionScreen"></activity>
         <activity android:name="com.android.MemoryGameActivities.Highscores"></activity>
         <activity android:name="com.android.MemoryGameActivities.findPlayerActivity"></activity>
-        <activity android:name="com.android.MemoryGameActivities.PairsOfTwoCardsActivity"></activity>
+        <activity android:name="com.android.MemoryGameActivities.BattleActivity"></activity>
+        <activity android:name="com.android.MemoryGameActivities.NormalActivity"></activity>
     </application>
 
 </manifest>
