--- a/MemoryGame/local.properties
+++ b/MemoryGame/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed May 20 13:05:06 EEST 2020
+#Thu May 21 16:16:16 EEST 2020
 >>>>>>>=master
-sdk.dir=C\:\\Users\\GEORGE\\AppData\\Local\\Android\\Sdk
-<<<<<<<=HEAD
+sdk.dir=C\:\\Users\\georg\\AppData\\Local\\Android\\Sdk
 =\=\=\=\=\=\=
+<<<<<<<=HEAD
