--- a/MemoryGame/app/src/main/AndroidManifest.xml
+++ b/MemoryGame/app/src/main/AndroidManifest.xml
@@ -22,8 +22,14 @@
         <activity android:name="com.android.MemoryGameActivities.SelectionScreen"></activity>
         <activity android:name="com.android.MemoryGameActivities.Highscores"></activity>
         <activity android:name="com.android.MemoryGameActivities.findPlayerActivity"></activity>
-        <activity android:name="com.android.MemoryGameActivities.BattleActivity"></activity>
-        <activity android:name="com.android.MemoryGameActivities.NormalActivity"></activity>
+        <activity
+            android:name="com.android.MemoryGameActivities.BattleActivity"
+            android:screenOrientation="nosensor"
+            ></activity>
+        <activity
+            android:name="com.android.MemoryGameActivities.NormalActivity"
+            android:screenOrientation="nosensor"
+            ></activity>
     </application>
 
 </manifest>
